# gradient

./: .envrc  .gitignore  .nixos-test-history  .yamllint.yml  AUDIT-DB.md  AUDIT-EVAL-WORKER.md  AUDIT-FILESTORAGE.md  AUDIT-FRONTEND.md  AUDIT-PROTOCOL.md  AUDIT-SCHEDULER.md  AUDIT-TEST.md  AUDIT-WEB.md  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  audit.md  flake.nix  mkdocs.yml  plan.md  rust-toolchain.toml  start-db.sh  update-version.sh
backend/: Cargo.toml  TESTING.md  deny.toml  rustfmt.toml  t.json  test-store  test.sh
backend/.cargo/: config.toml
backend/builder/: Cargo.toml  build.rs
backend/builder/src/: build.rs  evaluator.rs  lib.rs  scheduler.rs  status.rs  tests.rs
backend/builder/tests/: integration.rs
backend/cache/: Cargo.toml
backend/cache/src/: cacher.rs  lib.rs  tests.rs
backend/core/: Cargo.toml
backend/core/src/: altexecuter.rs  ci_reporter.rs  constants.rs  consts.rs  database.rs  derivation.rs  email.rs  evaluation_trigger.rs  evaluator.rs  executer.rs  gc.rs  github_app.rs  http.rs  hydra.rs  input.rs  lib.rs  log_storage.rs  nar_storage.rs  nix_flake.rs  nix_hash.rs  nix_url.rs  permission.rs  permissions.rs  pool.rs  shutdown.rs  sources.rs  state.rs  status.rs  tests.rs  types.rs  webhooks.rs  wildcard.rs
backend/core/tests/: actions_dispatch.rs  common.rs  git_remote.rs  input.rs  input_tests.rs  ip_allowlist.rs  mod.rs  nar_extract.rs  path_utils.rs  sources.rs  sources_tests.rs  types_tests.rs
backend/entity/: Cargo.toml
backend/entity/src/: admin_task.rs  api.rs  audit_log.rs  build.rs  build_dependency.rs  build_feature.rs  build_machine.rs  build_machine_architecture.rs  build_machine_feature.rs  build_output.rs  build_output_signature.rs  build_product.rs  build_request_blob.rs  cache.rs  cache_derivation.rs  cache_metric.rs  cache_role.rs  cache_upstream.rs  cache_user.rs  cached_path.rs  cached_path_signature.rs  commit.rs  derivation.rs  derivation_dependency.rs  derivation_feature.rs  derivation_metric.rs  derivation_output.rs  derivation_output_signature.rs  direct_build.rs  dispatched_job.rs  entry_point.rs  entry_point_message.rs  evaluation.rs  evaluation_flake_input_override.rs  evaluation_message.rs  feature.rs  ids.rs  integration.rs  lib.rs  organization.rs  (+18 more)
backend/entity/tests/: build_tests.rs  compile_fail.rs  enum_tests.rs  evaluation_tests.rs  mod.rs  organization_tests.rs  user_tests.rs
backend/evaluator/: Cargo.toml  build.rs
backend/evaluator/src/: eval.nix  eval.rs  flake.rs  lib.rs  scheduler.rs  worker.rs  worker_pool.rs
backend/gradient-cache/: Cargo.toml
backend/gradient-cache/src/: lib.rs
backend/gradient-ci/: Cargo.toml
backend/gradient-ci/src/: abort.rs  context.rs  integration_lookup.rs  lib.rs  manifest_state.rs  reactor.rs  reporting.rs  unpark.rs
backend/gradient-core/: Cargo.toml
backend/gradient-core/src/: http.rs  hydra.rs  ip_allowlist.rs  lib.rs  shutdown.rs  state_root.rs  upstream.rs
backend/gradient-core/tests/: actions_dispatch.rs  git_remote.rs  input.rs  ip_allowlist.rs  mod.rs  nar_extract.rs  path_utils.rs  sources.rs
backend/gradient-db/: Cargo.toml
backend/gradient-db/src/: admin_tasks.rs  base_workers.rs  build.rs  build_attempt.rs  cache_reach.rs  cache_storage.rs  cache_upstream.rs  closure.rs  connection.rs  consistency.rs  context.rs  dep_closure.rs  dependency_graph.rs  derivation.rs  draining.rs  drv_output_spec.rs  gc.rs  graph_sql.rs  lib.rs  org_cache.rs  org_derivations.rs  org_workers.rs  permissions.rs  pool.rs  project_board.rs  promotion.rs  reachability.rs  reconcile.rs  recovery.rs  retention.rs  rollup.rs  runtime_closure.rs  status_reactor.rs  status_sql.rs
backend/gradient-entity/: Cargo.toml
backend/gradient-entity/src/: acknowledged_derivation.rs  audit_log.rs  base_worker.rs  build.rs  build_attempt.rs  build_job.rs  build_log_chunk.rs  build_product.rs  cache.rs  cache_derivation.rs  cache_metric.rs  cache_upstream.rs  cached_path.rs  cli_device_authorization.rs  commit.rs  derivation.rs  derivation_build.rs  derivation_closure.rs  derivation_feature.rs  derivation_input_source.rs  derivation_metric.rs  derivation_output.rs  dispatched_job.rs  entry_point.rs  entry_point_dep_count.rs  entry_point_message.rs  eval_cache_store.rs  evaluation.rs  evaluation_attr_cost.rs  evaluation_flake_input_override.rs  evaluation_input_update.rs  evaluation_message.rs  evaluation_metric.rs  flake_output_node.rs  github_installation.rs  ids.rs  integration.rs  lib.rs  metric_rollup.rs  open_pr_state.rs  (+14 more)
backend/gradient-eval/: Cargo.toml
backend/gradient-eval/src/: eval_worker.rs  flake_walk.rs  ipc.rs  jobs.rs  lib.rs  nix_eval.rs  stats.rs  wildcard_walk.rs
backend/gradient-exec/: Cargo.toml
backend/gradient-exec/src/: path_utils.rs  (+1 more)
backend/gradient-flake-lock/: Cargo.toml
backend/gradient-forge/: Cargo.toml
backend/gradient-migration/: Cargo.toml
backend/gradient-nix/: Cargo.toml
backend/gradient-notify/: Cargo.toml
backend/gradient-proto/: Cargo.toml
backend/gradient-scheduler/: Cargo.toml
backend/gradient-score/: Cargo.toml
backend/gradient-sources/: Cargo.toml
backend/gradient-state/: Cargo.toml
backend/gradient-storage/: Cargo.toml
backend/gradient-test-support/: Cargo.toml
backend/gradient-types/: Cargo.toml
backend/gradient-util/: Cargo.toml
backend/gradient-web/: Cargo.toml
backend/gradient-worker/: Cargo.toml
backend/migration/: Cargo.toml
backend/nix-daemon/: Cargo.toml  README.md  tests.nix
backend/proto/: Cargo.toml  REFACTOR_NOTES.md
backend/scheduler/: Cargo.toml
backend/score/: Cargo.toml
backend/server/: Cargo.toml
backend/src/: endpoints.rs  executer.rs  input.rs  main.rs  requests.rs  scheduler.rs  tables.rs  types.rs
backend/test-support/: Cargo.toml
backend/web/: Cargo.toml
backend/worker/: Cargo.toml
cli/: Cargo.toml
cli/connector/: Cargo.toml
cli/src/: config.rs  input.rs  logfmt.rs  main.rs  narinfo.rs  netrc.rs  output.rs  request.rs
cli/tests/: build_watch.rs  cache_upload.rs  completion.rs  download_attr.rs  eval.rs  onboarding.rs
(+1905 files in other folders)
