[workspace]
members      = [".", "gradient-cache", "gradient-ci", "gradient-core", "gradient-db", "gradient-entity", "gradient-exec", "gradient-forge", "gradient-migration", "gradient-nix", "gradient-proto", "gradient-scheduler", "gradient-score", "gradient-sources", "gradient-state", "gradient-storage", "gradient-test-support", "gradient-types", "gradient-util", "gradient-web", "gradient-worker"]
default-members = [".", "gradient-cache", "gradient-ci", "gradient-core", "gradient-db", "gradient-entity", "gradient-exec", "gradient-forge", "gradient-migration", "gradient-nix", "gradient-proto", "gradient-scheduler", "gradient-score", "gradient-sources", "gradient-state", "gradient-storage", "gradient-test-support", "gradient-types", "gradient-util", "gradient-web", "gradient-worker"]
resolver     = "2"

[workspace.package]
version     = "1.2.0"
edition     = "2024"
license     = "AGPL-3.0"
authors     = ["Wavelens GmbH <info@wavelens.io>"]
repository  = "https://github.com/wavelens/gradient"
publish     = false

[workspace.lints.clippy]
dbg_macro = "warn"
todo      = "warn"

[workspace.dependencies]
# Internal crates
gradient-cache        = { path = "gradient-cache" }
gradient-ci           = { path = "gradient-ci" }
gradient-core         = { path = "gradient-core" }
gradient-db           = { path = "gradient-db" }
gradient-entity       = { path = "gradient-entity" }
gradient-exec         = { path = "gradient-exec" }
gradient-forge        = { path = "gradient-forge" }
gradient-migration    = { path = "gradient-migration" }
gradient-nix          = { path = "gradient-nix" }
gradient-proto        = { path = "gradient-proto" }
gradient-scheduler    = { path = "gradient-scheduler" }
gradient-score        = { path = "gradient-score" }
gradient-sources      = { path = "gradient-sources" }
gradient-state        = { path = "gradient-state" }
gradient-storage      = { path = "gradient-storage" }
gradient-test-support = { path = "gradient-test-support" }
gradient-types        = { path = "gradient-types" }
gradient-util         = { path = "gradient-util" }
gradient-web          = { path = "gradient-web" }
gradient-worker       = { path = "gradient-worker" }

# Async / runtime
async-std    = { version = "1", features = ["attributes", "tokio1"] } # defaults: provides the task executor
async-stream = { version = "0.3", default-features = false }
async-trait  = { version = "0.1", default-features = false }
futures      = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio        = { version = "1.50", default-features = false, features = ["rt-multi-thread"] }
tokio-test   = { version = "0.4", default-features = false }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
tokio-util   = { version = "0.7", default-features = false }

# Error handling
anyhow    = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false }

# System / host metrics
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

# Time / random / ids
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
cron   = { version = "0.16", default-features = false }
rand   = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }
uuid   = { version = "1.23", default-features = false, features = ["std", "v7", "fast-rng", "serde", "macro-diagnostics"] }

# Serialization
rkyv       = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
serde      = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Crypto / encoding
base64          = { version = "0.22", default-features = false, features = ["std"] }
blake3          = { version = "1.5", default-features = false, features = ["std"] }
crypter         = { version = "0.3", default-features = false, features = ["argon"] }
ed25519-compact = { version = "2.2", default-features = false, features = ["random"] }
hex             = { version = "0.4", default-features = false, features = ["std"] }
hmac            = { version = "0.13", default-features = false }
rand_core       = { version = "0.10", default-features = false }
ring            = { version = "0.17", default-features = false }
sha2            = { version = "0.11", default-features = false }
ssh-key         = { version = "0.6", default-features = false, features = ["ed25519", "rand_core", "std"] }

# Compression / archive
async-compression = { version = "0.4", default-features = false, features = ["tokio", "zstd"] }
bzip2             = { version = "0.6" } # defaults: pure-Rust backend is only reachable via `default`
tar               = { version = "0.4", default-features = false }
xz2               = { version = "0.1", default-features = false }
zstd              = { version = "0.13", default-features = false }

# Bytes / buffers
bytes = { version = "1.11", default-features = false, features = ["std"] }

# Concurrency
arc-swap = { version = "1", default-features = false }

# CLI / logging / observability
clap               = { version = "4.6", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
sentry             = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"] }
tracing            = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "smallvec", "tracing-log", "env-filter", "json"] }

# Database (sea-orm)
sea-orm           = { version = "1.1", default-features = false, features = ["macros", "json-array", "mock", "postgres-array", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["cli", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"] }

# HTTP / networking
async-ssh2-lite      = { version = "0.5", default-features = false, features = ["tokio"] }
axum                 = { version = "0.8", default-features = false }
axum-streams         = { version = "0.25", default-features = false, features = ["json"] }
axum_typed_multipart = { version = "0.16", default-features = false, features = ["tempfile_3"] }
email_address        = { version = "0.2", default-features = false }
governor             = { version = "0.10", default-features = false, features = ["std"] }
http                 = { version = "1.4", default-features = false }
http-body-util       = { version = "0.1", default-features = false }
jsonwebtoken         = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
lettre               = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
reqwest              = { version = "0.13", default-features = false, features = ["rustls", "json", "form", "stream", "charset", "http2", "multipart", "brotli", "gzip", "deflate"] }
tower                = { version = "0.5", default-features = false }
tower-http           = { version = "0.6", default-features = false, features = ["cors", "request-id", "trace"] }
tower_governor       = { version = "0.8", default-features = false, features = ["axum"] }

# Object store / git
git2         = { version = "0.21", default-features = false, features = ["https", "ssh"] }
libc         = { version = "0.2", default-features = false }
object_store = { version = "0.13", default-features = false, features = ["aws", "fs"] }

# Harmonia (git deps)
harmonia-file-nar              = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-protocol              = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-store-content-address = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-store-derivation      = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-store-path            = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-store-remote          = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-utils-base-encoding   = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-utils-hash            = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-utils-io              = { git = "https://github.com/nix-community/harmonia.git", default-features = false }
harmonia-utils-signature       = { git = "https://github.com/nix-community/harmonia.git", default-features = false }

# Nix bindings
nix-bindings = { git = "https://github.com/DerDennisOP/nix-bindings", branch = "feat/optimized-eval-capi", default-features = false }

# Shared utilities promoted from member crates
git-url-parse = { version = "0.6" } # defaults: re-exports the `url` crate
ipnet         = { version = "2.10", default-features = false, features = ["std"] }
password-auth = { version = "1.0", default-features = false, features = ["argon2"] }
prometheus    = { version = "0.14", default-features = false, features = ["process"] }
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
rustls        = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs", "tls12"] }
rustls-native-certs = { version = "0.8", default-features = false }
subtle        = { version = "2.6", default-features = false }
tempfile      = { version = "3.27", default-features = false }
url           = { version = "2.5", default-features = false }
webpki-roots  = { version = "1.0", default-features = false }

# Enum primitive conversions
num_enum = { version = "0.7", default-features = false }

# MIME type detection
mime_guess = { version = "2", default-features = false }

# Test utilities
axum-test = { version = "20.0", default-features = false }
mockall   = { version = "0.14", default-features = false }
wiremock  = { version = "0.6", default-features = false }

# Each `tests/*.rs` file in `web` is its own binary that links the full crate
# graph (axum + tokio + sea-orm + …); 17 of them in parallel pushes link-time
# memory past 8 GB. Line tables keep panic backtraces useful while halving
# debuginfo size - and link-time RAM with it.
[profile.test]
debug = "line-tables-only"

[patch.crates-io]
harmonia-file-nar              = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-protocol              = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-protocol-derive       = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-store-content-address = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-store-derivation      = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-store-path            = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-utils-base-encoding   = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-utils-hash            = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-utils-io              = { git = "https://github.com/nix-community/harmonia.git" }
harmonia-utils-signature       = { git = "https://github.com/nix-community/harmonia.git" }

[package]
name        = "gradient-server"
description = "Nix-based Continuous Integration System"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lints]
workspace = true

[dependencies]
gradient-cache     = { workspace = true }
clap               = { workspace = true }
gradient-core      = { workspace = true }
gradient-state     = { workspace = true }
gradient-util      = { workspace = true }
gradient-types     = { workspace = true }
sentry             = { workspace = true }
tokio              = { workspace = true, features = ["process", "signal", "macros"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
gradient-web       = { workspace = true }
