[package]
name = "gradient-cli"
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]
description = "CLI-Tool for Gradient"
repository = "https://github.com/wavelens/gradient"

[[bin]]
name = "gradient"
path = "src/main.rs"

[workspace]
members = [".", "connector"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
rpassword = "7.4"
clap_complete = "4"
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
toml = "1.0"
tokio = { version = "1.50", features = ["macros", "process", "rt-multi-thread"] }
serde_json = "1.0"
connector = { path = "connector" }
rand = { version = "0.9", features = ["std_rng"] }
colored = "3.1"
