[package]
name = "gradient-cli"
version = "1.2.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]
description = "CLI-Tool for Gradient"
repository = "https://github.com/wavelens/gradient"

[[bin]]
name = "gradient"
path = "src/main.rs"

[workspace]
members = [".", "connector"]

[dependencies]
blake3 = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6", features = ["derive", "unstable-ext"] }
password-auth = { version = "1.0", features = ["argon2"] }
rpassword = "7.4"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
toml = "1.0"
tokio = { version = "1.50", features = ["macros", "process", "rt-multi-thread"] }
serde_json = "1.0"
connector = { path = "connector" }
rand = { version = "0.10", features = ["std_rng"] }
colored = "3.1"
futures = "0.3"
git2 = "0.20"
reqwest = { version = "0.13", features = ["multipart"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
