[package]
name = "gradient-cli"
version = "1.3.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Wavelens GmbH <info@wavelens.io>"]
description = "CLI-Tool for Gradient"
repository = "https://github.com/wavelens/gradient"

[[bin]]
name = "gradient"
path = "src/main.rs"

[workspace]
members = [".", "connector"]

[dependencies]
blake3 = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6", features = ["derive", "unstable-ext"] }
password-auth = { version = "1.0", features = ["argon2"] }
rpassword = "7.4"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
toml = "1.0"
tokio = { version = "1.50", features = ["macros", "process", "rt-multi-thread", "time"] }
serde_json = "1.0"
connector = { path = "connector" }
rand = { version = "0.10", features = ["std_rng"] }
colored = "3.1"
anyhow = "1"
futures = "0.3"
git2 = "0.21"
reqwest = { version = "0.13", features = ["multipart"] }
ratatui = "0.30"

[features]
default = []
nix = ["dep:harmonia-file-nar", "dep:harmonia-store-path", "dep:harmonia-store-remote", "dep:harmonia-utils-hash", "dep:tempfile", "dep:zstd"]
# `gradient eval` (nix-eval-jobs-like). Pulls the shared evaluator crate and
# thus libnix; off by default so the lean CLI builds without Nix dev libraries.
eval = ["dep:gradient-eval"]

[dependencies.gradient-eval]
path = "../backend/gradient-eval"
optional = true

[dependencies.tempfile]
version = "3"
optional = true

[dependencies.zstd]
version = "0.13"
default-features = false
optional = true

[dependencies.harmonia-file-nar]
git = "https://github.com/nix-community/harmonia.git"
default-features = false
optional = true

[dependencies.harmonia-store-path]
git = "https://github.com/nix-community/harmonia.git"
default-features = false
optional = true

[dependencies.harmonia-store-remote]
git = "https://github.com/nix-community/harmonia.git"
default-features = false
optional = true

[dependencies.harmonia-utils-hash]
git = "https://github.com/nix-community/harmonia.git"
default-features = false
optional = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
