[package]
name = "builder"
version = "0.2.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens UG <info@wavelens.io>"]

[lib]
name = "builder"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
core = { path = "../core" }
entity = { path = "../entity" }
futures = "0.3"
nix-daemon = { git = "https://github.com/wavelens/nix-daemon", tag = "v0.1.2" }
sea-orm = { version = "1.1", features = ["json-array", "mock", "postgres-array", "runtime-tokio", "sqlx-postgres", "with-uuid"] }
sentry = "0.40"
serde_json = "1.0"
tokio = { version = "1.44", features = ["process", "rt-multi-thread"] }
uuid = { version = "1.16", features = ["fast-rng", "macro-diagnostics", "v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tokio = { version = "1.44", features = ["rt", "macros"] }
