[package]
name = "builder"
version = "1.0.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]

[lib]
name = "builder"
path = "src/lib.rs"

[dependencies]
anyhow        = { workspace = true }
async-trait   = { workspace = true }
chrono        = { workspace = true }
gradient-core = { path = "../core", package = "core" }
entity        = { workspace = true }
futures       = { workspace = true }
nix-bindings  = { workspace = true }
nix-daemon    = { workspace = true }
sea-orm       = { workspace = true }
sentry        = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["process"] }
tracing       = { workspace = true }
uuid          = { workspace = true }

[dev-dependencies]
mockall       = { workspace = true }
test-support  = { workspace = true }
tokio         = { workspace = true, features = ["macros"] }
tokio-test    = { workspace = true }
