[package]
name = "core"
version = "0.4.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens UG <info@wavelens.io>"]

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
async-ssh2-lite = { version = "0.5", features = ["tokio"] }
async-stream = "0.3"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
crypter = "0.2"
entity = { path = "../entity" }
futures = "0.3"
git-url-parse = "0.6"
migration = { path = "../migration" }
rand = "0.9"
rand_core = "0.9"
sea-orm = { version = "1.1", features = ["json-array", "mock", "postgres-array", "runtime-tokio", "sqlx-postgres", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["with-uuid", "with-chrono", "with-json", "sqlx-postgres", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ssh-key = { version = "0.6", features = ["ed25519"] }
tokio = { version = "1.47", features = ["process", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["fast-rng", "macro-diagnostics", "v4"] }
ed25519-compact = { version = "2.1", features = ["random"] }
nix-daemon = { path = "../nix-daemon" }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
hex = "0.4"
password-auth = "1.0"
tempfile = "3.23"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
